Add Navigation Bar component

--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,1 +1,8 @@
+// version 4
+@import 'variables';
+@import 'node_modules/bootstrap/scss/bootstrap';
 
+body {
+  padding-top: 50px;
+  color: #3a4250;
+}
