Add Dashboard > Overview components

--- a/web/src/app/core/navigation-bar/navigation-bar.component.html
+++ b/web/src/app/core/navigation-bar/navigation-bar.component.html
@@ -6,6 +6,9 @@
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="dashboard" routerLinkActive="active">Dashboard</a>
+      </li>
     </ul>
   </div>
 </nav>
