--- a/web/src/app/dashboard/dashboard.component.html
+++ b/web/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
+      <router-outlet></router-outlet>
     </main>
   </div>
 </div>
