Add mock content to navigation bar

--- a/web/src/app/core/navigation-bar/navigation-bar.component.html
+++ b/web/src/app/core/navigation-bar/navigation-bar.component.html
@@ -9,6 +9,13 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="dashboard" routerLinkActive="active">Dashboard</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="settings" routerLinkActive="active">Settings</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="404" routerLinkActive="active">Help</a>
+      </li>
     </ul>
+    <button class="btn btn-success" type="submit">Add Accessory</button>
   </div>
 </nav>
