--- a/web/src/app/dashboard/dashboard.component.html
+++ b/web/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
   <div class="row">
+    <sidebar> </sidebar>
     <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
       <router-outlet></router-outlet>
     </main>
