Add title to dashboard parent template

--- a/web/src/app/dashboard/dashboard.component.html
+++ b/web/src/app/dashboard/dashboard.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <sidebar> </sidebar>
     <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
+      <h1>{{parentTitle | titlecase }} <small class="text-muted">{{childTitle | titlecase }}</small></h1>
       <router-outlet></router-outlet>
     </main>
   </div>
