--- a/web/src/app/dashboard/sidebar/sidebar.component.html
+++ b/web/src/app/dashboard/sidebar/sidebar.component.html
@@ -1,4 +1,10 @@
 <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
   <ul class="nav nav-pills flex-column">
+    <li class="nav-item">
+      <a class="nav-link active" [routerLink]="['overview']" routerLinkActive="active">Overview</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link"  [routerLink]="['manage']" routerLinkActive="active">Manage</a>
+    </li>
   </ul>
 </nav>
