Add placeholder Dashboard Export component

--- a/web/src/app/dashboard/sidebar/sidebar.component.html
+++ b/web/src/app/dashboard/sidebar/sidebar.component.html
@@ -6,5 +6,8 @@
     <li class="nav-item">
       <a class="nav-link"  [routerLink]="['manage']" routerLinkActive="active">Manage</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['export']" routerLinkActive="active">Export</a>
+    </li>
   </ul>
 </nav>
