Add placeholder Dashboard Console component

--- a/web/src/app/dashboard/sidebar/sidebar.component.html
+++ b/web/src/app/dashboard/sidebar/sidebar.component.html
@@ -10,4 +10,10 @@
       <a class="nav-link" [routerLink]="['export']" routerLinkActive="active">Export</a>
     </li>
   </ul>
+  <hr class="my-2" />
+  <ul class="nav nav-pills flex-column">
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['console']" routerLinkActive="active">Console</a>
+    </li>
+  </ul>
 </nav>
