--- a/web/src/app/dashboard/sidebar/sidebar.component.html
+++ b/web/src/app/dashboard/sidebar/sidebar.component.html
@@ -15,5 +15,8 @@
     <li class="nav-item">
       <a class="nav-link" [routerLink]="['console']" routerLinkActive="active">Console</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['logs']" routerLinkActive="active">Logs</a>
+    </li>
   </ul>
 </nav>
