Add 'Up Next' label to navigation action button

--- a/web/src/app/core/navigation-bar/navigation-bar.component.html
+++ b/web/src/app/core/navigation-bar/navigation-bar.component.html
@@ -16,6 +16,9 @@
         <a class="nav-link" routerLink="404" routerLinkActive="active">Help</a>
       </li>
     </ul>
-    <button class="btn btn-success" type="submit">Add Accessory</button>
+    <div class="next-up">
+      <a>Next up</a>
+      <button class="btn btn-success" type="submit">Add Accessory</button>
+    </div>
   </div>
 </nav>
